force-app/main/objects/Bureau_Invoice__c.object
<CustomObject>
    <description>To link to the Job object for OLB jobs.</description>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <inlineHelpText>Applies to credits, FOC and discounts</inlineHelpText>
        <label>Approved By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCardContactNo__c</fullName>
        <label>Credit Card Telephone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCaseNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bureau_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditInstructions__c</fullName>
        <label>Credit Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Please specify if this is a value or %</inlineHelpText>
        <label>Discount</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Log_In_Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Generic Log In Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Bureau_Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceStatus__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed – SHL Online</fullName>
                </value>
                <value>
                    <fullName>SOE Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceTypeReason__c</fullName>
        <label>Invoice Type Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS1 - Demo</fullName>
                </value>
                <value>
                    <fullName>MS2 - MS Not included in Opp</fullName>
                </value>
                <value>
                    <fullName>MS3 - Discount</fullName>
                </value>
                <value>
                    <fullName>MS4 - Other</fullName>
                </value>
                <value>
                    <fullName>SB1 - MS Operator Error</fullName>
                </value>
                <value>
                    <fullName>SB2 - Client order Error</fullName>
                </value>
                <value>
                    <fullName>SB3 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>SB4 - Incorrect Address</fullName>
                </value>
                <value>
                    <fullName>SB5 - System Problems</fullName>
                </value>
                <value>
                    <fullName>SB6 - Candidates Withdrawn</fullName>
                </value>
                <value>
                    <fullName>SB7 - Incorrect Invoice</fullName>
                </value>
                <value>
                    <fullName>SB8 - SOE Operator error</fullName>
                </value>
                <value>
                    <fullName>SB9 - Incorrect pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceType__c</fullName>
        <label>Invoice Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>SOE Query</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Reissue</fullName>
                </value>
                <value>
                    <fullName>Generic Log In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Monthly__c</fullName>
        <formula>Job__r.InvoiceMonthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Monthly?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_notes__c</fullName>
        <label>Invoice notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAdded_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreditCardPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>Bureau_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MS_Revenue_or_Demo__c</fullName>
        <label>MS Revenue or Demo</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderBill__c</fullName>
        <label>Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromotionalCode__c</fullName>
        <label>Promotional Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_not_in_our_stream__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue not in our stream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUNOrderNo__c</fullName>
        <label>SUN Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Managed Services Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BInv{00000}</displayFormat>
        <label>Managed Services Invoice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Case_Number_Required</fullName>
        <active>true</active>
        <description>If Revenu Not in Our Stream is checked or Invoice Type is &quot;Credit&quot; then Credit Case Number is mendatory.</description>
        <errorConditionFormula>IF(
   AND(Job__r.RecordType.DeveloperName = &apos;Bureau_Service&apos;,OR(Revenue_not_in_our_stream__c == true,ISPICKVAL(InvoiceType__c,&apos;Credit&apos;)),ISBLANK(CreditCaseNo__c))
,true,false)</errorConditionFormula>
        <errorDisplayField>CreditCaseNo__c</errorDisplayField>
        <errorMessage>Please select a case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Instruction_Required</fullName>
        <active>true</active>
        <description>If Invoice Type is &quot;Credit&quot; then Credit Instruction is mandatory.</description>
        <errorConditionFormula>IF(AND(Job__r.RecordType.DeveloperName = &apos;Bureau_Service&apos;,ISPICKVAL(InvoiceType__c,&apos;Credit&apos;),ISBLANK(CreditInstructions__c)),true,false)</errorConditionFormula>
        <errorDisplayField>CreditInstructions__c</errorDisplayField>
        <errorMessage>Please provide value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Type_Reason_Mandatory</fullName>
        <active>true</active>
        <description>&quot;Invoice Type Reason&quot; is mandatory if &quot;Free of Charge&quot;, &quot;Credit&quot; or &quot;Reissue&quot; has been selected as &quot;Invoice Type&quot;.</description>
        <errorConditionFormula>AND(
	OR(		
		TEXT(InvoiceType__c)=&quot;Credit&quot;,
                TEXT(InvoiceType__c)=&quot;Free of Charge&quot;,
		TEXT(InvoiceType__c)=&quot;Reissue&quot;
	),
	ISPICKVAL(InvoiceTypeReason__c,&apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>InvoiceTypeReason__c</errorDisplayField>
        <errorMessage>Please provide Invoice Type Reason value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IsAdded_Notes</fullName>
        <active>true</active>
        <description>If Invoice Notes field is not blank then Added Notes should not be unchecked.</description>
        <errorConditionFormula>IF(ISBLANK( Invoice_notes__c ), if(IsAdded_Notes__c==true,true,false),if(IsAdded_Notes__c==false,true,false))</errorConditionFormula>
        <errorDisplayField>IsAdded_Notes__c</errorDisplayField>
        <errorMessage>Please tick this if Invoice Notes have been added.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_record_except_admin_if_SOE_Complete</fullName>
        <active>true</active>
        <description>Once the status = &apos;SOE Complete&apos; the record should be locked to all users other than system admins.</description>
        <errorConditionFormula>IF( NOT(ISNEW()), IF( ISPICKVAL(PRIORVALUE
( InvoiceStatus__c ), 
&quot;SOE Complete&quot;) ,IF( NOT( CONTAINS( $Profile.Name , &quot;Admin&quot;) ) ,true,false),false), false)</errorConditionFormula>
        <errorMessage>Cannot edit record as status set to SOE Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOE_profile_can_set_invoice_status</fullName>
        <active>true</active>
        <description>only users on the SOE profile can choose &apos;SOE Complete&apos;</description>
        <errorConditionFormula>AND(NOT( OR( $Permission.SOE ,CONTAINS( $Profile.Name , &quot;Admin&quot;), $Permission.Permission_to_bypass_SOE_profile_can_set_invoice_status_rule )), ISPICKVAL( InvoiceStatus__c , &quot;SOE Complete&quot;) )</errorConditionFormula>
        <errorMessage>Only users with SOE profile can select SOE Complete status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sun_Order_not_set_blank_if_SOE_Complete</fullName>
        <active>true</active>
        <description>rule to ensure &apos;SOE Complete&apos; cannot be chosen unless there is a value in the Sun order number field.</description>
        <errorConditionFormula>AND( ISPICKVAL( InvoiceStatus__c , &quot;SOE Complete&quot;) , ISBLANK( SUNOrderNo__c ) )</errorConditionFormula>
        <errorMessage>Status SOE Complete cannot be chosen if Sun Order Number is blank</errorMessage>
    </validationRules>
</CustomObject>